# human-requests

./: .flake8  Makefile  README.md  TODO.md  f  pyproject.toml  requirements.txt  test.py
.github/: labels.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/build-docs/: action.yml
.github/workflows/: auto-area-labels.yml  base-tests.yml  browser-antibot.yml  release.yml  reusable-test.yml  sannysoft-stats.yml
docs/: requirements.txt
docs/source/: autotest.rst  conf.py  index.rst  interesting.rst  quick_start.rst  sannysoft_antibot.rst
docs/source/_ext/: antibot_plot.py  antibot_table.py
docs/source/_static/: antibot.css
docs/source/browser_selection/: index.rst  sannysoft_antibot.rst
human_requests/: __init__.py  autotest.py  base.py  browser_master.py  fetch.js  fingerprint.py  fingerprint_gen.html  helper_tools.py  human_browser.py  human_context.py  human_page.py  human_page.pyi  impersonation.py  pytest_plugin.py  session.py
human_requests/abstraction/: __init__.py  cookies.py  http.py  proxy_manager.py  request.py  response.py
human_requests/browsers/: browser_master.py
human_requests/browsers/families/: base.py  camoufox_family.py  patchright_family.py  playwright_family.py
human_requests/core/: impersonation.py  session.py
human_requests/core/abstraction/: cookies.py  http.py  request.py  response.py  response_content.py
human_requests/core/tools/: http_utils.py
human_requests/fingerprint/: fingerprint.py
human_requests/impersonation/: chooser.py  impersonation.py
human_requests/network_analyzer/: anomaly_sniffer.py
human_requests/new/: session.py
human_requests/new/abstraction/: cookies.py  http.py
human_requests/new/engines/: base.py
human_requests/new/tools/: base.py
human_requests/pytest_plugin/: __init__.py  _config.py  _constants.py  _runtime.py
human_requests/tools/: __init__.py  base.py  helper_tools.py  http_utils.py
network_manager/: __init__.py  helper_tools.py  impersonation.py  session.py
network_manager/abstraction/: http.py  response.py
network_manager/new/: session.py
network_manager/tools/: http_utils.py
test_server/: Makefile  app.py  main.py  pyproject.toml
test_server/pages/: base.html  challenge.html
tests/: conftest.py  old_conftest.py  sannysoft_parser.py  test_api_base.py  test_autotest_plugin.py  test_autotest_runtime.py  test_base.py  test_browser_antibot.py  test_fetch_retry.py  test_headers.py  test_proxy.py
tests/core/: test_base.py  test_headers.py
tests/new/: test_cookie_selection.py
tests/sannysoft/: Makefile  browser_antibot_sannysoft.json  collect_antibot_stats.py  sannysoft_parser.py  test_browser_antibot.py  tool.py
(+5 files in other folders)
